# mcp-memo

./: Cargo.toml  Dockerfile  compose.yaml
src/: main.rs
src/mcp/: mod.rs
src/memos/: mod.rs
src/memos/service/: auth.rs  mod.rs  note.rs  user.rs
